<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.Signup.SignupFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="356dp"
            android:layout_height="294dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/nombre" />

            <TextView
                android:id="@+id/apellido"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/apellido" />

            <TextView
                android:id="@+id/email2"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/email1" />

            <TextView
                android:id="@+id/contrasena"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/contrase_a1" />

            <TextView
                android:id="@+id/reingresecontrasena"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/reingrese_contrase_a" />
        </LinearLayout>

        <TextView
            android:id="@+id/comienzatransferir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comienza_a_transferir"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.109" />

        <TextView
            android:id="@+id/yatienescuenta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ya_tienes_una_cuenta"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.952" />

        <ImageView
            android:id="@+id/logo3"
            android:layout_width="41dp"
            android:layout_height="33dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.064"
            app:srcCompat="@drawable/icons8" />

        <Button
            android:id="@+id/btnlsignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/verde"
            android:text="@string/crear_una_nueva_cuenta"
            app:layout_constraintBottom_toBottomOf="@+id/yatienescuenta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.949" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>