<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.RequestMoney.RequestMoneyFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/btnihomepage"
            android:layout_width="175dp"
            android:layout_height="36dp"
            android:backgroundTint="@color/verde"
            android:text="@string/deposite_su_dinero"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.915" />

        <TextView
            android:id="@+id/textohomepage"
            android:layout_width="153dp"
            android:layout_height="40dp"
            android:text="@string/ingreso"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.546"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.046" />

        <TextView
            android:id="@+id/cantidadaingresar"
            android:layout_width="165dp"
            android:layout_height="34dp"
            android:text="@string/cantidad_a_ingresar"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.524"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.307" />

        <ImageView
            android:id="@+id/logo35"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/todo3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.529"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.568"
            app:srcCompat="@drawable/icons8" />

        <TextView
            android:id="@+id/visitelinkinformacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visite_nuestro_link_de_informaci_n"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.825" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="30dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023"
            app:srcCompat="@drawable/arrow_icon"
            android:contentDescription="@string/todo1" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="326dp"
            android:layout_height="55dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.107"
            app:srcCompat="@drawable/pp4"
            android:contentDescription="@string/todo2" />

        <TextView
            android:id="@+id/montoaingresar"
            android:layout_width="163dp"
            android:layout_height="26dp"
            android:layout_marginBottom="280dp"
            android:text="@string/_20_00"
            android:textColor="@color/design_default_color_primary_variant"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView7"
            app:layout_constraintVertical_bias="0.401" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>